feat: geBanners with filter
