# internal/delivery/banner/dto.go
@@ -3,6 +3,34 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
 package banner
 
+import (
+	"time"
+)
+
+// BannerResponseSuccess defines model for BannerResponseSuccess.
+type BannerResponseSuccess struct {
+	// BannerId Идентификатор баннера
+	BannerId *int `json:"banner_id,omitempty"`
+
+	// Content Содержимое баннера
+	Content *map[string]interface{} `json:"content,omitempty"`
+
+	// CreatedAt Дата создания баннера
+	CreatedAt *time.Time `json:"created_at,omitempty"`
+
+	// FeatureId Идентификатор фичи
+	FeatureId *int `json:"feature_id,omitempty"`
+
+	// IsActive Флаг активности баннера
+	IsActive *bool `json:"is_active,omitempty"`
+
+	// TagIds Идентификаторы тэгов
+	TagIds *[]int `json:"tag_ids,omitempty"`
+
+	// UpdatedAt Дата обновления баннера
+	UpdatedAt *time.Time `json:"updated_at,omitempty"`
+}
+
 // GetBannerParams defines parameters for GetBanner.
 type GetBannerParams struct {
 	FeatureId *int `form:"feature_id,omitempty" json:"feature_id,omitempty"`
