# internal/entity/banner.go
@@ -1,6 +1,21 @@
 package entity
 
+import "time"
+
 type Banner struct {
+
+	// ID Идентификатор баннера
+	ID int `json:"id,omitempty"`
+
+	// Name Название баннера
+	Name string `json:"name,omitempty"`
+
+	// CreatedAt Дата создания
+	CreatedAt time.Time `json:"created_at,omitempty"`
+
+	// UpdatedAt Дата обновления
+	UpdatedAt *time.Time `json:"updated_at,omitempty"`
+
 	// Content Содержимое баннера
 	Content map[string]interface{} `json:"content,omitempty"`
 
@@ -12,4 +27,11 @@ type Banner struct {
 
 	// TagIds Идентификаторы тэгов
 	TagIds []int `json:"tag_ids,omitempty"`
+}
+
+type BannerSearchParams struct {
+	FeatureId *int
+	TagId     *int
+	Limit     *int
+	Offset    *int
 }
